meet up code ready

--- a/Traditional_MultiClass_Text_Classification.ipynb
+++ b/Traditional_MultiClass_Text_Classification.ipynb
@@ -147,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_freq_target_comentario(df, 'CAUSA')"
+    "plot_freq_target_comentario(df, 'TARGET')"
    ]
   },
   {
@@ -246,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = df.CAUSA_id"
+    "labels = df.TARGET_id"
    ]
   },
   {
@@ -269,7 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = tfidf_legacy.transform(df.COMENTARIO).toarray()\n",
+    "features = tfidf_legacy.transform(df.TEXTINPUT).toarray()\n",
     "one_hot = onehot_encoder_legacy.transform(np.array(df[['CATEGORYCOLUMN']]))"
    ]
   },
@@ -532,7 +532,7 @@
    "outputs": [],
    "source": [
     "dft = df.loc[list(indices_test)].copy()\n",
-    "dft['CAUSA_id_pred'] = y_pred\n",
+    "dft['TARGET_id_pred'] = y_pred\n",
     "dft.head()"
    ]
   },
@@ -604,7 +604,7 @@
     "conf_mat = confusion_matrix(y_test_n, y_pred_n)\n",
     "fig, ax = plt.subplots(figsize=(8,6))\n",
     "sns.heatmap(conf_mat, annot=True, fmt='d',\n",
-    "            xticklabels=category_id_df.CAUSA.values, yticklabels=category_id_df.CAUSA.values)\n",
+    "            xticklabels=category_id_df.TARGET.values, yticklabels=category_id_df.TARGET.values)\n",
     "plt.ylabel('Actual')\n",
     "plt.xlabel('Predicted')\n",
     "plt.show()"
@@ -618,7 +618,7 @@
    "source": [
     "print(\"Summary of model by classes:\")\n",
     "print(metrics.classification_report(y_test_n, y_pred_n, \n",
-    "                                    target_names=df['CAUSA'].unique()))"
+    "                                    target_names=df['TARGET'].unique()))"
    ]
   }
  ],
